# rwpspread

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  build.rs  flake.nix
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-aarch64.yml  build-x86_64.yml  build.yml  build_aarch64.yml  build_x86.yml  check.yml  publish.yaml  rust.yml
completions/: _rwpspread  rwpspread.bash  rwpspread.fish
man/: rwpspread.1
src/: cli.rs  helpers.rs  hyprland.rs  layout.rs  lib.rs  main.rs  outputs.rs  palette.rs  parser.rs  splitter.rs  swaylock.rs  watch.rs  wayland.rs  worker.rs  wpaperd.rs
src/integrations/: helpers.rs  hyprlock.rs  hyprpaper.rs  mod.rs  palette.rs  swaybg.rs  swaylock.rs  wpaperd.rs
