[package]
name = "rwpspread"
version = "0.4.1"
edition = "2021"
authors = ["0xk1f0"]
description = "Multi-Monitor Wallpaper Spanning Utility"
readme = "README.md"
repository = "https://github.com/0xk1f0/rwpspread"
homepage = "https://github.com/0xk1f0/rwpspread"
license = "GPL-3.0-only"
exclude = [".github/", "flake*"]
rust-version = "1.74.0"

[dependencies]
blake3 = "1.6.0"
bincode = "1.3.3"
clap = { version = "4.5.30", features = ["derive"] }
glob = "0.3.2"
image = { version = "0.25.5", default-features = false, features = [
    "default-formats",
] }
material-colors = { version = "0.4.2", default-features = false, features = [
    "std",
] }
rand = "0.9.0"
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
smithay-client-toolkit = { version = "0.19.2", default-features = false, features = [
    "calloop",
] }
inotify = { version = "0.11.0", default-features = false }
crossbeam-channel = "0.5.14"

[build-dependencies]
clap = { version = "4.5.30", features = ["derive"] }
clap_complete = "4.5.45"
clap_mangen = "0.2.26"
serde = { version = "1.0.218", features = ["derive"] }

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 8
opt-level = 3
strip = true
lto = true
