[package]
name = "rwpspread"
version = "0.5.0"
edition = "2024"
authors = ["0xk1f0"]
description = "Multi-Monitor Wallpaper Spanning Utility"
readme = "README.md"
repository = "https://github.com/0xk1f0/rwpspread"
homepage = "https://github.com/0xk1f0/rwpspread"
license = "GPL-3.0-only"
exclude = [".github/", "flake*"]
rust-version = "1.85.0"

[dependencies]
blake3 = "1.8.2"
bincode = { version = "2.0.1", default-features = false, features = ["std", "alloc", "serde"] }
clap = { version = "4.5.37", features = ["derive"] }
glob = "0.3.2"
image = { version = "0.25.6", default-features = false, features = [
    "default-formats",
] }
material-colors = { version = "0.4.2", default-features = false, features = [
    "std",
] }
rand = "0.9.1"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
smithay-client-toolkit = { version = "0.19.2", default-features = false, features = [
    "calloop",
] }
inotify = { version = "0.11.0", default-features = false }
crossbeam-channel = "0.5.15"

[build-dependencies]
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = "4.5.47"
clap_mangen = "0.2.26"
serde = { version = "1.0.219", features = ["derive"] }

[profile.dev]
codegen-units = 16
opt-level = 3
strip = "symbols"
lto = "thin"

[profile.release]
codegen-units = 8
opt-level = 3
strip = "symbols"
lto = "fat"
